--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: python
-python:
-  - "2.7"
-  - "3.6"
-  - "3.7-dev"  # 3.7 development branch
+
+matrix:
+  include:
+    - python: "2.7"
+    - python: "3.6"
+    - python: "3.7"
+      dist: xenial  # required for Python >= 3.7 (travis-ci/travis-ci#9069)
+    - python: "3.8-dev"
+      dist: xenial
+  allow_failures:
+    - python: "3.8-dev"
 
 # command to install dependencies
 # command to run tests
-
 
 script:
   - subs.py
